--- a/src/main/webapp/resources/css/footer-distributed-with-address-and-phones.css
+++ b/src/main/webapp/resources/css/footer-distributed-with-address-and-phones.css
@@ -27,7 +27,7 @@
 
 .footer-distributed h3{
 	color:  #ffffff;
-	font: normal 36px 'Cookie', cursive;
+	font: normal 20px 'Cookie', cursive;
 	margin: 0;
 }
 
@@ -45,7 +45,7 @@
 
 .footer-distributed .footer-links a{
 	display:inline-block;
-	line-height: 1.8;
+	line-height: 1;
 	text-decoration: none;
 	color:  inherit;
 }
@@ -77,7 +77,7 @@
 }
 
 .footer-distributed .footer-center i.fa-envelope{
-	font-size: 17px;
+	font-size: 14px;
 	line-height: 38px;
 }
 
@@ -86,6 +86,7 @@
 	color: #ffffff;
 	vertical-align: middle;
 	margin:0;
+	font-size: 15px
 }
 
 .footer-distributed .footer-center p span{
@@ -157,7 +158,7 @@
 	.footer-distributed .footer-right{
 		display: block;
 		width: 100%;
-		margin-bottom: 40px;
+		margin-bottom: 30px;
 		text-align: center;
 	}
 
